[gd_scene load_steps=31 format=3 uid="uid://ctk8t0ohpljms"]

[ext_resource type="Script" uid="uid://cdwca4jvfkafg" path="res://godot4/arena/Arena.gd" id="1_avtyt"]
[ext_resource type="PackedScene" uid="uid://jhsh150wnrbw" path="res://godot4/arena/managers/IntroManager.tscn" id="1_m2x2u"]
[ext_resource type="Resource" uid="uid://cmmvbrr51qwj1" path="res://godot4/debug/default_data/default_players/p1.tres" id="2_3p1dt"]
[ext_resource type="PackedScene" uid="uid://cek3r1l5uiek1" path="res://godot4/arena/managers/ScoreManager.tscn" id="2_fyulk"]
[ext_resource type="Resource" uid="uid://fc2yg6p4flm5" path="res://godot4/debug/default_data/default_players/p2.tres" id="3_jq12e"]
[ext_resource type="PackedScene" uid="uid://ck7ir4e3p2vwi" path="res://godot4/arena/managers/MessageManager.tscn" id="3_jxfg0"]
[ext_resource type="Resource" uid="uid://c2u64vntxjiy6" path="res://godot4/debug/default_data/default_players/p3.tres" id="4_c1158"]
[ext_resource type="Resource" uid="uid://dxdsvkvidj80p" path="res://godot4/debug/default_data/default_players/p4.tres" id="5_ej3mp"]
[ext_resource type="PackedScene" uid="uid://cgjeqx4n1ot0e" path="res://godot4/actors/ships/Ship.tscn" id="6_p0dyi"]
[ext_resource type="PackedScene" uid="uid://d3d15u074tcak" path="res://actors/brains/PlayerBrain.tscn" id="7_o1qkg"]
[ext_resource type="PackedScene" uid="uid://dnny8ekvjg4ck" path="res://godot4/debug/SOLog.tscn" id="7_tad78"]
[ext_resource type="PackedScene" uid="uid://bkvs83hnc26an" path="res://actors/brains/CPUBrain.tscn" id="8_segll"]
[ext_resource type="PackedScene" uid="uid://dy7pqq7fivkj3" path="res://godot4/arena/hud/StandaloneVersusMatchOverScreen.tscn" id="9_kkxbo"]
[ext_resource type="Resource" uid="uid://bdemi8y308ry6" path="res://godot4/data/match_params/default.tres" id="9_nr0n0"]
[ext_resource type="Resource" uid="uid://bpw2qo5744n7m" path="res://godot4/data/minigames/default.tres" id="9_vsuw2"]
[ext_resource type="PackedScene" uid="uid://ctdiyn70rdfsq" path="res://godot4/arena/managers/TimeManager.tscn" id="10_mhlox"]
[ext_resource type="PackedScene" uid="uid://bbh6dfcfwh26k" path="res://godot4/traits/Styleable.tscn" id="12_g1af4"]
[ext_resource type="Resource" uid="uid://dk1wwbut07grf" path="res://godot4/data/styles/default.tres" id="13_n4nm8"]
[ext_resource type="Theme" uid="uid://dui8cebqku8x5" path="res://interface/themes/olympic_theme.tres" id="16_64a4r"]
[ext_resource type="Script" uid="uid://tvmm4mdwnb4y" path="res://godot4/arena/ArenaCamera2D.gd" id="16_ad0xh"]
[ext_resource type="Script" uid="uid://rnvhumm1cowb" path="res://godot4/debug/DebugActionsManager.gd" id="16_uol0h"]
[ext_resource type="PackedScene" uid="uid://7l4wbr8f06he" path="res://godot4/arena/managers/GameOverManager.tscn" id="17_u22a8"]
[ext_resource type="Texture2D" uid="uid://733uiq5oy6du" path="res://assets/icon/minicards/sets/diamondsnatch.png" id="18_3l87r"]
[ext_resource type="Texture2D" uid="uid://bvtwlkbaasdkr" path="res://combat/levels/background/menus.png" id="18_f7kik"]
[ext_resource type="Texture2D" uid="uid://033a3tccla31" path="res://assets/HUD/fake_crt_under.png" id="19_hnpxt"]
[ext_resource type="PackedScene" uid="uid://baqs1sh3hug4e" path="res://godot4/arena/hud/Counter.tscn" id="26_picc7"]
[ext_resource type="PackedScene" uid="uid://di86kl3ihl8op" path="res://godot4/arena/hud/Bar.tscn" id="27_8sctu"]
[ext_resource type="Script" uid="uid://ba4f506maocjs" path="res://godot4/arena/hud/VersusHUD.gd" id="28_mtqpa"]
[ext_resource type="PackedScene" uid="uid://dt8lwx0muu10p" path="res://godot4/arena/hud/ScoreBar.tscn" id="29_infxo"]
[ext_resource type="PackedScene" uid="uid://cy5pkamh8gihg" path="res://ui/common_elements/PlayersReady/PlayersReadyWheels.tscn" id="30_um0tc"]

[node name="Arena" type="Node2D"]
script = ExtResource("1_avtyt")
players = {
"P1": ExtResource("2_3p1dt"),
"P2": ExtResource("3_jq12e"),
"P3": ExtResource("4_c1158"),
"P4": ExtResource("5_ej3mp")
}
ship_scene = ExtResource("6_p0dyi")
player_brain_scene = ExtResource("7_o1qkg")
cpu_brain_scene = ExtResource("8_segll")
match_over_screen_scene = ExtResource("9_kkxbo")
default_minigame = ExtResource("9_vsuw2")
default_params = ExtResource("9_nr0n0")

[node name="Styleable" parent="." instance=ExtResource("12_g1af4")]
style = ExtResource("13_n4nm8")

[node name="Managers" type="Node" parent="."]

[node name="IntroManager" parent="Managers" instance=ExtResource("1_m2x2u")]

[node name="TimeManager" parent="Managers" instance=ExtResource("10_mhlox")]
unique_name_in_owner = true

[node name="ScoreManager" parent="Managers" instance=ExtResource("2_fyulk")]
unique_name_in_owner = true

[node name="GameOverManager" parent="Managers" instance=ExtResource("17_u22a8")]
unique_name_in_owner = true

[node name="MessageManager" parent="Managers" node_paths=PackedStringArray("battlefield") instance=ExtResource("3_jxfg0")]
battlefield = NodePath("../../Battlefield")

[node name="DebugActionsManager" type="Node" parent="Managers" node_paths=PackedStringArray("arena")]
process_mode = 3
script = ExtResource("16_uol0h")
arena = NodePath("../..")

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
zoom = Vector2(0.2, 0.2)
script = ExtResource("16_ad0xh")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="Background" type="TextureRect" parent="BackgroundLayer"]
unique_name_in_owner = true
z_index = -500
z_as_relative = false
offset_right = 1280.0
offset_bottom = 724.0
texture = ExtResource("18_f7kik")

[node name="Homes" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Battlefield" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="HUD" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 3
layer = 10

[node name="Vignette" type="Sprite2D" parent="HUD"]
scale = Vector2(0.667, 0.667)
texture = ExtResource("19_hnpxt")
centered = false
flip_h = true

[node name="SOLog" parent="HUD" instance=ExtResource("7_tad78")]
visible = false
offset_left = 950.0
offset_top = 150.0
offset_right = 1275.0
offset_bottom = 550.0
metadata/_edit_lock_ = true

[node name="CanvasGroup" type="CanvasGroup" parent="HUD"]
z_index = 200
fit_margin = 50.0
clear_margin = 50.0

[node name="MinigameText" type="RichTextLabel" parent="HUD/CanvasGroup"]
unique_name_in_owner = true
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 666.0
offset_right = 1268.0
offset_bottom = 750.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("16_64a4r")
bbcode_enabled = true
text = "[right][color=#ffde5e]TITLE[/color]
DESCRIPTION[/right]"
fit_content = true

[node name="MinigameIcon" type="Sprite2D" parent="HUD/CanvasGroup"]
unique_name_in_owner = true
position = Vector2(1222, 633)
scale = Vector2(0.3, 0.3)
texture = ExtResource("18_3l87r")

[node name="Clock" parent="HUD" instance=ExtResource("26_picc7")]
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -115.0
offset_top = 8.0
offset_right = -5.0
offset_bottom = 73.0
grow_horizontal = 0
grow_vertical = 1
horizontal_alignment = 2
vertical_alignment = 0

[node name="TimeBar" parent="HUD" instance=ExtResource("27_8sctu")]
unique_name_in_owner = true
offset_left = 1251.0
offset_top = 80.0
offset_right = 1271.0
offset_bottom = 594.0

[node name="ScoreHUD" type="Node2D" parent="HUD"]
unique_name_in_owner = true
script = ExtResource("28_mtqpa")
score_bar_scene = ExtResource("29_infxo")
metadata/_edit_lock_ = true

[node name="ScoreBars" type="HBoxContainer" parent="HUD/ScoreHUD"]
unique_name_in_owner = true
offset_left = 8.0
offset_top = 46.0
offset_right = 160.0
offset_bottom = 716.0
theme_override_constants/separation = 8

[node name="PlayersReadyWheels" parent="HUD/ScoreHUD" instance=ExtResource("30_um0tc")]
unique_name_in_owner = true
